# Gemini_Video_MCP

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  main.py  pyproject.toml  start_http.bat
src/: __init__.py  config.py  gemini_client.py  server.py
