[project]
name = "gemini-video-mcp"
version = "0.1.0"
description = "MCP server that describes local videos via Gemini direct video upload (ported from MoFox-Bot)."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "gemini", "video", "vision"]
dependencies = [
    "mcp[cli]>=1.13.1",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.1",
    # --http 上传端点用 Starlette 的 multipart 表单解析，需要 python-multipart。
    "python-multipart>=0.0.9",
]

[tool.ruff]
line-length = 120
